# deploiement-api-alyra

./: .gitignore  Dockerfile  README.md  app.py  model.py  pyproject.toml  requirements.txt
app/: bert_model.py  bert_sentiment_classifier.py  image_model.py  image_preprocess.py  main.py  schemas.py
examples/: sklearn_model.ipynb  tf_bert_fine_tuning.ipynb  tf_mnist_model.ipynb  tf_sentiment_model.ipynb
frontend/: streamlit_app.py
tests/: test_app.py  test_model.py
